# plasma-applet-usalli

./: CMakeLists.txt  LICENSE  README.md  mawakit_plasma5.kdev4
package/: metadata.desktop  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/icons/: LICENSE-2.0.txt
package/contents/lib/: PrayTimes.js  adhan.esm.js
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  main.qml
package/contents/ui/config/: configGeneral.qml
